// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Dropdown should render disabled 1`] = `
<a
  className="link link--disabled pointer-events--none"
  data-ui-component={true}
  disabled={true}
  href="http://google.com"
>
  Test Link
</a>
`;

exports[`components/Dropdown should render onclick 1`] = `
<a
  className="link"
  data-ui-component={true}
  onClick={[Function]}
>
  Test Link
</a>
`;

exports[`components/Dropdown should render style classes 1`] = `
<a
  className="link link--muted"
  data-ui-component={true}
>
  Test Link
</a>
`;
